--- a/index.html
+++ b/index.html
@@ -622,110 +622,85 @@
     </div>
   </div>
 </div>
-    <div
-      class="modal fade"
-      id="examModal"
-      data-bs-backdrop="static"
-      tabindex="-1"
-      aria-hidden="true"
-    >
-      <div
-        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
-      >
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Biology Quiz 1</h5>
+
+
+
+<div
+  class="modal fade"
+  id="examModal"
+  data-bs-backdrop="static"
+  tabindex="-1"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h5 class="modal-title">Biology Quiz 1</h5>
+      </div>
+
+      <!-- Modal Body -->
+      <div class="modal-body">
+        <form id="examForm">
+
+          <!-- Personal Info -->
+          <div class="row">
+            <div class="col-md-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text">Name:</span>
+                <input type="text" class="form-control" name="student_name" />
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text">Grade and Section:</span>
+                <input type="text" class="form-control" name="grade_n_section" />
+              </div>
+            </div>
           </div>
 
-          <div class="modal-body">
-            <form id="examForm">
-              <!-- Personal Info -->
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"
-                      >Name:</span
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="student_name"
-                      aria-describedby="basic-addon1"
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"
-                      >Grade and Section:</span
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="grade_n_section"
-                      aria-describedby="basic-addon1"
-                    />
-                  </div>
-                </div>
-              </div>
-              <p class="fst-italic px-md-5 mx-md-5">Directions: Read and understand each item carefully. Choose the letter of the correct answer and write it on a separate sheet of paper.</p>
-              <!-- Q1 -->
-              <div class="mb-3">
-                <label class="form-label fw-bold"
-                  >1. Which level of organization is the basic unit of life?</label
-                >
-                <input
-                  type="hidden"
-                  name="ques1"
-                  value="Main function of plant cell wall?"
-                />
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="Cell" id="q1b"
-                  />
-                  <label class="form-check-label" for="q1b">Cell</label>
-                </div>
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="Tissue" id="q1b"
-                  />
-                  <label class="form-check-label" for="q1b">Tissue</label>
-                </div>
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="Organ" id="q1c"
-                  />
-                  <label class="form-check-label" for="q1c"
-                    >Organ</label
-                  >
-                </div>
-                <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="q1"
-                    value="System" id="q1d"
-                  />
-                  <label class="form-check-label" for="q1d"
-                    >System</label
-                  >
-                </div>
-                <details>
-  <summary class="fs-6 fw-bolder">Scientific Context</summary>
-  <p>The cell is the smallest functional and structural unit that can independently perform all life processes. While tissues and organs are complex, they are all built from individual cells.</p>
-</details>
+          <p class="fst-italic px-md-5 mx-md-5">
+            Directions: Read and understand each item carefully. Choose the
+            letter of the correct answer.
+          </p>
 
-              </div>
-<hr class="text-danger">
+          <!-- ================= QUESTIONS ================= -->
+
+          <!-- Q1 -->
+          <div class="mb-3">
+            <label class="form-label fw-bold">
+              1. Which level of organization is the basic unit of life?
+            </label>
+
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="q1" id="q1a" value="Cell">
+              <label class="form-check-label" for="q1a">Cell</label>
+            </div>
+
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="q1" id="q1b" value="Tissue">
+              <label class="form-check-label" for="q1b">Tissue</label>
+            </div>
+
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="q1" id="q1c" value="Organ">
+              <label class="form-check-label" for="q1c">Organ</label>
+            </div>
+
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="q1" id="q1d" value="System">
+              <label class="form-check-label" for="q1d">System</label>
+            </div>
+
+            <details>
+              <summary class="fw-bolder">Scientific Context</summary>
+              <p>The cell is the smallest functional unit capable of life.</p>
+            </details>
+          </div>
+
+          <hr class="text-danger">
 
 
               <!-- Q2 -->
@@ -1236,18 +1211,20 @@
   <p>Active transport requires the cell to expend energy (usually ATP) to move substances "uphill" against their natural concentration gradient. This is essential for accumulating high concentrations of needed molecules like ions and glucose.</p>
 </details>
 
-              </div>-->>
-            </form>
               </div>
-        </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" id="submitExam">
-              Submit Answers
-            </button>
-          </div>
-        </div>
+            </form>
       </div>
+
+      <!-- Modal Footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" id="submitExam">
+          Submit Answers
+        </button>
+      </div>
+
     </div>
+  </div>
+</div>
     
 
     <div class="container mb-5 pb-5">
