--- a/lessons/module_1.html
+++ b/lessons/module_1.html
@@ -501,7 +501,7 @@
         <!-- Card 1 -->
         <div class="card shadow" data-aos="fade-up">
           <img
-            src="images/lesson_1.jpg"
+            src="../images/lesson_1.jpg"
             class="card-img-top img-thumbnail"
             alt="Cell Wall"
           />
@@ -522,7 +522,7 @@
         <!-- Card 4 -->
         <div class="card shadow" data-aos="fade-up">
           <img
-            src="images/lesson_4.jpg"
+            src="../images/lesson_4.jpg"
             class="card-img-top img-thumbnail"
             alt="Cell Types and Cell Modifications"
           />
@@ -543,7 +543,7 @@
         <!-- Card 2 -->
         <div class="card shadow" data-aos="fade-up">
           <img
-            src="images/lesson_2.jpg"
+            src="../images/lesson_2.jpg"
             class="card-img-top img-thumbnail"
             alt="Cell Structure and Functions"
           />
@@ -564,7 +564,7 @@
         <!-- Card 5 -->
         <div class="card shadow" data-aos="fade-up">
           <img
-            src="images/lesson_5.jpg"
+            src="../images/lesson_5.jpg"
             class="card-img-top img-thumbnail"
             alt="Cell Cycle"
           />
@@ -585,7 +585,7 @@
         <!-- Card 3 -->
         <div class="card shadow" data-aos="fade-up">
           <img
-            src="images/lesson_3.jpg"
+            src="../images/lesson_3.jpg"
             class="card-img-top img-thumbnail"
             alt="Prokaryotic vs. Eukaryotic Cells"
           />
@@ -617,7 +617,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img src="images/icons.PNG" class="mx-auto d-block img-fluid">
+        <img src="../images/icons.PNG" class="mx-auto d-block img-fluid">
       </div>
     </div>
   </div>
@@ -1233,7 +1233,7 @@
         <div class="row align-items-center">
           <div class="col-md-4 text-center">
             <img
-              src="images/author.jfif"
+              src="../images/author.jfif"
               alt="Author"
               class="author-img mb-3"
             />
@@ -1528,4 +1528,5 @@
     </script>
   </body>
 </html>
+
 
