--- a/lessons/module_5.html
+++ b/lessons/module_5.html
@@ -133,7 +133,7 @@
     <!-- Header -->
     <header class="lecture-header py-4 mb-4">
       <div class="container">
-        <h1 class="fw-bold">Lesson 4: Cell Types and Cell Modification</h1>
+        <h1 class="fw-bold">Module 5: Cell Types and Cell Modification</h1>
       </div>
     </header>
 
@@ -1464,3 +1464,4 @@
     </script>
   </body>
 </html>
+
