--- a/lessons/module_4.html
+++ b/lessons/module_4.html
@@ -1038,7 +1038,7 @@
 
             <!-- QR Code -->
             <img
-              src="../videos_front/Video Module 4.png"
+              src="../videos_front/Video MODULE 4.png"
               alt="Video Lessons QR Code"
               class="img-fluid img-thumbnail mb-3"
             />
@@ -1437,3 +1437,4 @@
     </script>
   </body>
 </html>
+
