--- a/lessons/module_5.html
+++ b/lessons/module_5.html
@@ -1200,7 +1200,7 @@
 
             <!-- QR Code -->
             <img
-              src="../videos_front/Video Module 5.png"
+              src="../videos_front/Video MODULE 5.png"
               alt="Video Lessons QR Code"
               class="img-fluid img-thumbnail mb-3"
             />
@@ -1521,4 +1521,5 @@
     </script>
   </body>
 </html>
+
 
