--- a/lessons/module_5.html
+++ b/lessons/module_5.html
@@ -133,7 +133,7 @@
     <!-- Header -->
     <header class="lecture-header py-4 mb-4">
       <div class="container">
-        <h1 class="fw-bold">Lesson 4: Cell Types and Cell Modification</h1>
+        <h1 class="fw-bold">Module 5: Cell Types and Cell Modification</h1>
       </div>
     </header>
 
@@ -143,7 +143,7 @@
       <div class="card mb-5 shadow-sm">
         <div class="card-body">
           <p class="card-text">
-            Welcome to Lesson 4! Now that you understand the fundamental
+            Welcome to Module 5! Now that you understand the fundamental
             differences between prokaryotic and eukaryotic cells, it is time to
             look at how cells specialize. Just as a society needs doctors,
             engineers, and farmers to function, a multicellular organism needs
@@ -1521,5 +1521,6 @@
     </script>
   </body>
 </html>
+
 
 
