--- a/lessons/module_6.html
+++ b/lessons/module_6.html
@@ -360,8 +360,8 @@
       </div>
     </main>
 
-    <div class="container mb-5 pb-5">
-      <div class="card shadow p-4 mb-5">
+    <div class="container pb-5">
+      <div class="card shadow p-4">
         <!-- AUTHOR BASIC INFO -->
         <div class="row align-items-center">
           <div class="col-md-4 text-center">
@@ -446,6 +446,151 @@
         </div>
       </div>
     </div>
+
+    <div class="container my-5 pb-5">
+  <div class="row mb-5">
+    <div class="col-lg-10 mx-auto">
+
+      <h2 class="mb-4 text-center fw-bold">References</h2>
+
+      <div class="list-group">
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Abramczyk, A., & Jurkowski, S. (2020). Cooperative learning as an evidence-based teaching strategy:
+            What teachers know, believe, and how they use it.
+            <em>Journal of Education for Teaching, 46</em>(3), 296–308.
+          </p>
+          <small class="reference-doi">
+            <a href="https://doi.org/10.1080/02607476.2020.1733402" target="_blank">
+              https://doi.org/10.1080/02607476.2020.1733402
+            </a>
+          </small>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Axelino, R., & Ahmad, S. (2021). The development of interactive picture cards based on QR code for
+            elementary school students.
+            <em>Journal of Physics: Conference Series, 1788</em>(1), 012050.
+          </p>
+          <small class="reference-doi">
+            <a href="https://doi.org/10.1088/1742-6596/1788/1/012050" target="_blank">
+              https://doi.org/10.1088/1742-6596/1788/1/012050
+            </a>
+          </small>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Caraig, G., et al. (2022). Reading comprehension and scientific literacy among junior high school
+            students: A correlational study.
+            <em>Philippine Journal of Science Education, 14</em>(2), 45–58.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Department of Education. (2022).
+            <em>The Digital Rise Program: Strengthening ICT-assisted teaching and learning in the K–12
+            curriculum</em> (DepEd Order No. 042, s. 2022).
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Ebbinghaus, H. (1885).
+            <em>Memory: A contribution to experimental psychology</em>.
+            Teachers College, Columbia University.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Garzon, J. (2021). An overview of twenty years of mobile learning in science education.
+            <em>Journal of Educational Computing Research, 59</em>(4), 641–669.
+          </p>
+          <small class="reference-doi">
+            <a href="https://doi.org/10.1177/0735633120972022" target="_blank">
+              https://doi.org/10.1177/0735633120972022
+            </a>
+          </small>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Hernández-Beltrán, V., et al. (2023). QR codes as a learning tool in the classroom: A systematic review.
+            <em>International Journal of Educational Technology in Higher Education, 20</em>(1), 12–29.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Isman, A., et al. (2007). The impact of educational technology on student learning.
+            <em>Turkish Online Journal of Educational Technology, 6</em>(4), 112–120.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Karpicke, J. D., & Blunt, J. R. (2011). Retrieval practice produces more learning than elaborative
+            studying with concept mapping.
+            <em>Science, 331</em>(6018), 772–775.
+          </p>
+          <small class="reference-doi">
+            <a href="https://doi.org/10.1126/science.1199327" target="_blank">
+              https://doi.org/10.1126/science.1199327
+            </a>
+          </small>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Lazarowitz, R. (2010). Biology teaching: High school students’ attitudes and interests in biology topics.
+            <em>Journal of Biological Education, 44</em>(2), 54–62.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Pi, Z., et al. (2025). Mobile video-based learning: How QR codes facilitate independent learning in
+            vocational settings.
+            <em>Frontiers in Education, 10</em>, Article 114521.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Puradireja, S. (2022). Developing “Learning Letters” mobile applications and flashcards for early literacy.
+            <em>Journal of Innovative Educational Media, 5</em>(1), 88–102.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Sari, P., et al. (2023). Integration of QR codes in science flashcards: Enhancing student engagement and retention.
+            <em>Asian Journal of Science Education, 5</em>(2), 120–135.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Tarımer, İ., & Okumuş, İ. T. (2010). A study on the usage of QR codes in distance education.
+            <em>International Journal of Distributed and Parallel Systems, 1</em>(2), 55–64.
+          </p>
+        </div>
+
+        <div class="list-group-item reference-card mb-3 shadow-sm">
+          <p>
+            Traxler, J. (2009). Learning in a mobile age.
+            <em>International Journal of Mobile and Blended Learning, 1</em>(1), 1–12.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
 
     <!-- Footer -->
     <footer class="bg-dark text-white py-3 fixed-bottom">
