--- a/lessons/module_6.html
+++ b/lessons/module_6.html
@@ -592,7 +592,7 @@
   </div>
 </div>
 
-    <!-- Footer -->
+    <!-- Footer
     <footer class="bg-dark text-white py-3 fixed-bottom">
       <div class="container d-flex justify-content-end">
         <p class="fst-italic px-md-3">
@@ -606,7 +606,7 @@
           Answer Exam
         </button>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Exam Modal -->
     <div
@@ -2030,6 +2030,7 @@
     </script>
   </body>
 </html>
+
 
 
 
