--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -150,7 +150,7 @@
         </p>
       </div>
       <div class="row justify-content-center mb-5">
-        <div class="col-lg-6 col-xl-6 mb-5">
+        <div class="col-lg-6 col-xl-6">
           <div class="ratio ratio-16x9 rounded overflow-hidden shadow-lg">
             <iframe
               width="935"
@@ -196,10 +196,8 @@
         </div>
       </div>
       
-    </div>
-
     <!-- Footer -->
-    <div class="bg-dark text-white py-3 mx-5">
+    <div class="bg-dark text-white py-3">
       <div class="container d-flex justify-content-end">
         <p class="fst-italic px-md-3">
           Please answer the exam after you have studied the lecture properly
@@ -213,6 +211,8 @@
         </button>
       </div>
     </div>
+    </div>
+
 
     <!-- Exam Modal -->
     <div
@@ -1563,6 +1563,7 @@
     </script>
   </body>
 </html>
+
 
 
 
