--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -141,7 +141,7 @@
   </head>
   <body>
     
-    <div class="container py-5">
+    <div class="container py-lg-5 py-sm-1">
       <div class="text-center mb-4">
         <h2 class="fw-bold">Welcome to Your Module 6 Video Lecture 👋</h2>
         <p class="text-secondary mb-0">
@@ -1563,6 +1563,7 @@
     </script>
   </body>
 </html>
+
 
 
 
