--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -150,7 +150,7 @@
         </p>
       </div>
       <div class="row justify-content-center mb-5">
-        <div class="col-lg-6 col-xl-6">
+        <div class="col-lg-6 col-xl-6 mb-lg-5 mb-sm-1">
           <div class="ratio ratio-16x9 rounded overflow-hidden shadow-lg">
             <iframe
               width="935"
@@ -172,7 +172,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="col-lg-6 col-xl-6 mb-5">
+        <div class="col-lg-6 col-xl-6 mb-lg-5 mb-sm-1">
           <div class="ratio ratio-16x9 rounded overflow-hidden shadow-lg">
             <iframe
               width="935"
@@ -197,7 +197,7 @@
       </div>
       
     <!-- Footer -->
-    <div class="bg-dark text-white py-3">
+    <div class="bg-dark text-white py-2">
       <div class="container d-flex justify-content-end">
         <p class="fst-italic px-md-3">
           Please answer the exam after you have studied the lecture properly
@@ -1563,6 +1563,7 @@
     </script>
   </body>
 </html>
+
 
 
 
