--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -1139,7 +1139,7 @@
         improve.
       </p>
 
-      <hr/>
+      <hr style="padding: 30px 0;"/>
 
       <!-- CERTIFICATE SECTION -->
       <div style="border: 5px solid #000; padding: 20px">
@@ -1563,6 +1563,7 @@
     </script>
   </body>
 </html>
+
 
 
 
