--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -1186,13 +1186,21 @@
           "
         >
           <!-- LEFT SIDE -->
-          <div style="text-align: left">
-            <p id="date" style="margin-bottom: 5px"></p>
-            <p style="margin: 0">DR. GINA B. SELGA, Associate Professor</p>
+          <div style="text-align: left; position: relative">
+            <img
+              src="../images/esign.png"
+              alt="Signature"
+              width="120"
+              style="position: absolute; top: -20px; left: 70px"
+            />
+            <p style="margin: 40px 0 0 0">
+              DR. GINA B. SELGA, Associate Professor
+            </p>
           </div>
 
           <!-- RIGHT SIDE -->
           <div style="text-align: right">
+            <p id="date" style="margin-bottom: 5px"></p>
             <p style="margin: 0">Pangasinan State University</p>
           </div>
         </div>
@@ -1563,6 +1571,7 @@
     </script>
   </body>
 </html>
+
 
 
 
