--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -1196,6 +1196,9 @@
             <p style="margin: 40px 0 0 0">
               DR. GINA B. SELGA, Associate Professor
             </p>
+            <p>
+              Associate Professor
+            </p>
           </div>
 
           <!-- RIGHT SIDE -->
@@ -1571,6 +1574,7 @@
     </script>
   </body>
 </html>
+
 
 
 
