--- a/video_lessons/module_6.html
+++ b/video_lessons/module_6.html
@@ -1194,7 +1194,7 @@
               style="position: absolute; top: -20px; left: 70px"
             />
             <p style="margin: 40px 0 0 0">
-              DR. GINA B. SELGA, Associate Professor
+              DR. GINA B. SELGA
             </p>
             <p>
               Associate Professor
@@ -1574,6 +1574,7 @@
     </script>
   </body>
 </html>
+
 
 
 
